--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.tan.colormatch.Setting">
+    tools:context="com.example.tan.colormatch.Setting"
+    android:onClick="onClickLevel">
 
     <Button
         android:layout_width="wrap_content"
@@ -16,7 +17,7 @@
         android:id="@+id/back1"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:onClick="onClickSetting" />
+        android:onClick="onClickLevel" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,12 +32,21 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
+        android:id="@+id/levelSpinner"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:spinnerMode="dropdown"
         android:entries="@array/levels"
         android:prompt="@string/SelectLevel"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Select Difficulty:"
+        android:id="@+id/textView6"
+        android:layout_above="@+id/levelSpinner"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
