--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     tools:context="com.example.tan.colormatch.MainActivity">
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="PLAY"
         android:id="@+id/playButton"
@@ -20,7 +20,7 @@
         android:onClick="onButtonClick" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="HIGH-SCORES"
         android:id="@+id/highscoresButton"
@@ -29,7 +29,7 @@
         android:onClick="onButtonClick" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="SETTING"
         android:id="@+id/settingButton"
