--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.tan.colormatch.Setting">
+    tools:context="com.example.tan.colormatch.Setting"
+    android:onClick="onClickMusic">
 
     <Button
         android:layout_width="wrap_content"
@@ -16,7 +17,7 @@
         android:id="@+id/back1"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:onClick="onClickSetting" />
+        android:onClick="onClickMusic" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,10 +32,38 @@
     <SeekBar
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBar"
-        android:layout_below="@+id/music"
-        android:layout_toEndOf="@+id/back1"
-        android:layout_marginTop="136dp" />
+        android:id="@+id/musicSlider"
+        android:layout_above="@+id/sfxSlider"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="95dp"
+        android:indeterminate="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="MUSIC:"
+        android:id="@+id/textView4"
+        android:layout_alignBottom="@+id/musicSlider"
+        android:layout_toStartOf="@+id/musicSlider" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="SFX:"
+        android:id="@+id/textView5"
+        android:layout_above="@+id/back1"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_marginBottom="122dp" />
+
+    <SeekBar
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/sfxSlider"
+        android:layout_alignTop="@+id/textView5"
+        android:layout_toEndOf="@+id/textView4"
+        android:indeterminate="false" />
 
 
 </RelativeLayout>
