--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="levels">
-        <item>Level 1</item>
-        <item>Level 2</item>
+        <item>Easy</item>
+        <item>Normal</item>
+        <item>Difficult</item>
     </string-array>
 </resources>
