--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,7 +8,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.tan.colormatch.About"
-    android:onClick="onClickAbout">
+    android:onClick="onClickAbout"
+    android:backgroundTint="#96cfb5"
+    android:background="#caf48c">
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,7 +18,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="ABOUT"
         android:id="@+id/about"
-        android:layout_marginTop="48dp"
+        android:textStyle="bold"
+        android:layout_marginTop="39dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -34,6 +37,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="HOW TO PLAY?"
+        android:textStyle="bold"
         android:id="@+id/textView8"
         android:layout_below="@+id/about"
         android:layout_alignParentStart="true"
@@ -63,9 +67,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="DEVELOPED BY:"
+        android:textStyle="bold"
         android:id="@+id/textView10"
-        android:layout_marginTop="56dp"
-        android:layout_below="@+id/textView9"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
 
     <TextView
@@ -82,6 +86,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="TECHNICAL SUPPORT:"
+        android:textStyle="bold"
         android:id="@+id/textView12"
         android:layout_marginTop="35dp"
         android:layout_below="@+id/textView11"
