--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -8,7 +8,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.tan.colormatch.Setting"
-    android:onClick="onClickLevel">
+    android:onClick="onClickLevel"
+    android:background="#caf48c"
+    android:backgroundTint="#96cfb5">
 
     <Button
         android:layout_width="wrap_content"
@@ -24,6 +26,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="LEVEL"
+        android:textStyle="bold"
         android:id="@+id/level"
         android:layout_marginTop="48dp"
         android:layout_alignParentTop="true"
@@ -44,6 +47,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Select Difficulty:"
+        android:textStyle="bold"
         android:id="@+id/textView6"
         android:layout_above="@+id/levelSpinner"
         android:layout_centerHorizontal="true" />
