--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -8,7 +8,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.tan.colormatch.Setting"
-    android:onClick="onClickMusic">
+    android:onClick="onClickMusic"
+    android:background="#caf48c"
+    android:backgroundTint="#96cfb5">
 
     <Button
         android:layout_width="wrap_content"
@@ -25,6 +27,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="MUSIC"
         android:id="@+id/music"
+        android:textStyle="bold"
         android:layout_marginTop="48dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -44,6 +47,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="MUSIC:"
         android:id="@+id/textView4"
+        android:textStyle="bold"
         android:layout_alignBottom="@+id/musicSlider"
         android:layout_toStartOf="@+id/musicSlider" />
 
@@ -54,6 +58,7 @@
         android:text="SFX:"
         android:id="@+id/textView5"
         android:layout_above="@+id/back1"
+        android:textStyle="bold"
         android:layout_alignStart="@+id/textView4"
         android:layout_marginBottom="122dp" />
 
