--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -7,7 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.tan.colormatch.Setting">
+    tools:context="com.example.tan.colormatch.Setting"
+    android:background="#caf48c"
+    android:backgroundTint="#96cfb5">
 
     <Button
         android:layout_width="wrap_content"
@@ -24,6 +26,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="SETTINGS"
         android:id="@+id/textView2"
+        android:textStyle="bold"
         android:layout_marginTop="48dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
