--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -37,5 +37,15 @@
         android:id="@+id/stopButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="37dp" />
+        android:layout_marginBottom="37dp"
+        android:nestedScrollingEnabled="false"
+        android:onClick="onClickStop" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/counter"
+        android:layout_below="@+id/textTimer"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
