--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -13,41 +13,104 @@
     android:orientation="vertical"
     android:id="@+id/draw_circle">
 
-    <Chronometer
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textTimer"
-        android:format="00:00"
-        android:layout_below="@+id/textView14"
-        android:layout_alignParentStart="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="TIMER"
+        android:text="SCORE"
         android:id="@+id/textView14"
         android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="197dp" />
+        android:layout_marginStart="38dp"
+        android:layout_alignTop="@+id/counter"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="STOP"
         android:id="@+id/stopButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="37dp"
         android:nestedScrollingEnabled="false"
-        android:onClick="onClickStop" />
+        android:onClick="onClickStop"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/textView18" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/counter"
-        android:layout_below="@+id/textTimer"
+        android:layout_alignBottom="@+id/stopButton"
+        android:layout_toEndOf="@+id/textView14"
+        android:layout_marginStart="24dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="SELECT ONE OF THESE COLORS"
+        android:id="@+id/textView18"
+        android:layout_toEndOf="@+id/counter"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RED"
+        android:id="@+id/checkBox"
+        android:layout_below="@+id/textView18"
+        android:layout_alignParentStart="true"
+        android:checked="false"
+        android:textColor="#f80606" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BLUE"
+        android:id="@+id/checkBox2"
+        android:checked="false"
+        android:textColor="#052ef7"
+        android:layout_below="@+id/textView18"
+        android:layout_toEndOf="@+id/counter" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="YELLOW"
+        android:id="@+id/checkBox3"
+        android:checked="false"
+        android:textColor="#f6fa06"
+        android:layout_below="@+id/textView18"
+        android:layout_alignParentEnd="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BLACK"
+        android:id="@+id/checkBox4"
+        android:checked="false"
+        android:layout_below="@+id/checkBox"
         android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ORANGE"
+        android:id="@+id/checkBox5"
+        android:checked="false"
+        android:layout_alignTop="@+id/checkBox4"
+        android:layout_alignStart="@+id/checkBox2"
+        android:textColor="#f76e05" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PURPLE"
+        android:id="@+id/checkBox6"
+        android:checked="false"
+        android:textColor="#8604f7"
+        android:layout_below="@+id/checkBox3"
+        android:layout_alignStart="@+id/checkBox3" />
 
 </RelativeLayout>
