--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,8 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.tan.colormatch.About"
     android:onClick="onClickAbout"
-    android:backgroundTint="#96cfb5"
-    android:background="#caf48c">
+    android:backgroundTint="#96cfb5">
 
     <TextView
         android:layout_width="wrap_content"
