--- a/app/src/main/res/layout/activity_high_scores.xml
+++ b/app/src/main/res/layout/activity_high_scores.xml
@@ -8,8 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.tan.colormatch.HighScores"
-    android:background="#caf48c"
-    android:backgroundTint="#96cfb5">
+    android:background="#6a5b5456">
 
     <Button
         android:layout_width="wrap_content"
@@ -28,12 +27,13 @@
         android:id="@+id/textView3"
         android:textStyle="bold"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textColor="#1a3bf3"/>
+
     <TableRow
         android:id="@+id/tableRow1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffee00"
         android:layout_marginTop="125dp"
         android:layout_marginLeft="25dp">
 
@@ -58,7 +58,6 @@
         android:id="@+id/tableRow2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ff0000"
         android:layout_marginLeft="25dp"
         android:layout_below="@+id/tableRow1">
 
@@ -83,7 +82,6 @@
         android:id="@+id/tableRow3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffee00"
         android:layout_marginLeft="25dp"
         android:layout_below="@+id/tableRow2">
 
@@ -108,7 +106,6 @@
         android:id="@+id/tableRow4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ff0000"
         android:layout_marginLeft="25dp"
         android:layout_below="@+id/tableRow3">
 
@@ -133,7 +130,6 @@
         android:id="@+id/tableRow5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffee00"
         android:layout_marginLeft="25dp"
         android:layout_below="@+id/tableRow4">
 
@@ -158,7 +154,6 @@
         android:id="@+id/tableRow6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ff0000"
         android:layout_marginLeft="25dp"
         android:layout_below="@+id/tableRow5">
 
@@ -183,7 +178,6 @@
         android:id="@+id/tableRow7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffee00"
         android:layout_marginLeft="25dp"
         android:layout_below="@+id/tableRow6">
 
@@ -208,7 +202,6 @@
         android:id="@+id/tableRow8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ff0000"
         android:layout_marginLeft="25dp"
         android:layout_below="@+id/tableRow7">
 
@@ -233,7 +226,6 @@
         android:id="@+id/tableRow9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffee00"
         android:layout_marginLeft="25dp"
         android:layout_below="@+id/tableRow8">
 
@@ -258,7 +250,6 @@
         android:id="@+id/tableRow10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ff0000"
         android:layout_marginLeft="25dp"
         android:layout_below="@+id/tableRow9">
 
@@ -288,16 +279,18 @@
         android:layout_alignBottom="@+id/tableRow1"
         android:textStyle="bold"
         android:layout_alignStart="@+id/tableRow1"
-        android:layout_marginBottom="29dp" />
+        android:layout_marginBottom="29dp"
+        android:textColor="#ee2409" />
 
     <TextView
         android:id="@+id/textView16"
         android:layout_height="wrap_content"
         android:layout_width="150dp"
         android:textAlignment="center"
-        android:text="BEST TIME"
+        android:text="BEST SCORE"
         android:layout_alignBottom="@+id/textView15"
         android:textStyle="bold"
-        android:layout_alignEnd="@+id/tableRow1" />
+        android:layout_alignEnd="@+id/tableRow1"
+        android:textColor="#f7072f" />
 
 </RelativeLayout>
