--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -24,11 +24,11 @@
         android:text="SCORE"
         android:id="@+id/textView14"
         android:textStyle="bold"
-        android:layout_marginBottom="51dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView18"
-        android:layout_marginStart="78dp"
-        android:textColor="#f74615" />
+        android:textColor="#f808e4"
+        android:textSize="30sp"
+        android:layout_marginStart="94dp"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/textView18" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -60,11 +60,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="___"
+        android:textSize="30sp"
         android:id="@+id/counter"
         android:layout_alignBottom="@+id/textView14"
         android:layout_toEndOf="@+id/textView14"
         android:layout_marginStart="25dp"
-        android:textColor="#f74615" />
+        android:textColor="#f808e4" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="&lt;- BACK"
+            android:id="@+id/buttonBack"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="21dp"
+            android:onClick="onClickBack"
+            android:textColor="#f40909" />
 
     </RelativeLayout>
 
