--- a/app/src/main/res/layout/activity_high_scores.xml
+++ b/app/src/main/res/layout/activity_high_scores.xml
@@ -17,13 +17,15 @@
         android:id="@+id/back1"
         android:onClick="onClickHighScores"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#f50606" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="TOP PLAYERS"
+        android:textSize="32sp"
         android:id="@+id/textView3"
         android:textStyle="bold"
         android:layout_alignParentTop="true"
@@ -276,6 +278,7 @@
         android:layout_height="wrap_content"
         android:layout_width="150dp"
         android:text="PLAYERS"
+        android:textSize="20sp"
         android:layout_alignBottom="@+id/tableRow1"
         android:textStyle="bold"
         android:layout_alignStart="@+id/tableRow1"
@@ -288,6 +291,7 @@
         android:layout_width="150dp"
         android:textAlignment="center"
         android:text="BEST SCORE"
+        android:textSize="20sp"
         android:layout_alignBottom="@+id/textView15"
         android:textStyle="bold"
         android:layout_alignEnd="@+id/tableRow1"
