--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -17,7 +17,8 @@
         android:id="@+id/back1"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:onClick="onClickSetting" />
+        android:onClick="onClickSetting"
+        android:textColor="#f40909" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,6 +26,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="SETTINGS"
         android:id="@+id/textView2"
+        android:textSize="32sp"
         android:textStyle="bold"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -38,7 +40,8 @@
         android:onClick="onClickSetting"
         android:layout_below="@+id/spinner"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp" />
+        android:layout_marginTop="35dp"
+        android:textColor="#f40b0b" />
 
     <Switch
         android:layout_width="wrap_content"
